@@ -9,6 +9,9 @@ Change log
 
 0.5u:
 
+    - Added usage of GNU Getopt for cleaner parameter parsing. Run "java -jar SoundHelix.jar -h" to see the details. The syntax
+      of the start script parameters (run.bat and run.sh) have not been changed.
+
     - Added support for "fake" seventh chords, which use 3 instead of 4 notes. Seventh chords can be selected using a
       simple syntax (e.g., "C7" for C major seventh, "Am76" for A minor seventh, second inversion).
 
